[package]
name = "rust-socketio-microserv"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Paul Werner <https://github.com/paulpwo>"]
repository = "https://github.com/paulpwo/sockets_server_rust"
description = "High-performance Socket.IO microservice in Rust with real-time broadcasting and metrics"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
socketioxide = "0.13"
tower = "0.4"
tower-http = { version = "0.5", features = ["compression-br", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
